GiRaFFE_NRPy-A2B: Add run command for even higher resolution unit test.

--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-A2B.ipynb
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -576,24 +576,13 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.c -o Validation/A2B_unit_test -lm`...\n",
-      "Finished executing in 0.6094470024108887 seconds.\n",
+      "Finished executing in 0.6110210418701172 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.6189768314361572 seconds.\n",
+      "Finished in 0.6222484111785889 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "dxx0,dxx1,dxx2 = 3.33333e-03,3.33333e-03,3.33333e-03\n",
-      "x[0] = -1.00000e-02\n",
-      "x[1] = -6.66667e-03\n",
-      "x[2] = -3.33333e-03\n",
-      "x[3] = 4.33681e-19\n",
-      "x[4] = 3.33333e-03\n",
-      "x[5] = 6.66667e-03\n",
-      "x[6] = 1.00000e-02\n",
-      "Offsets: b,c,d = 0.000000,0.000000,0.000000\n",
-      "Offsets: g,h,l = 0.000000,0.000000,0.000000\n",
-      "Offsets: n,o,p = 0.000000,0.000000,0.000000\n",
       "dxx0,dxx1,dxx2 = 1.66667e-03,1.66667e-03,1.66667e-03\n",
       "x[0] = -1.00000e-02\n",
       "x[1] = -8.33333e-03\n",
@@ -611,7 +600,36 @@
       "Offsets: b,c,d = 0.000000,0.000000,0.000000\n",
       "Offsets: g,h,l = 0.000000,0.000000,0.000000\n",
       "Offsets: n,o,p = 0.000000,0.000000,0.000000\n",
-      "Finished in 0.2543017864227295 seconds.\n",
+      "dxx0,dxx1,dxx2 = 8.33333e-04,8.33333e-04,8.33333e-04\n",
+      "x[0] = -1.00000e-02\n",
+      "x[1] = -9.16667e-03\n",
+      "x[2] = -8.33333e-03\n",
+      "x[3] = -7.50000e-03\n",
+      "x[4] = -6.66667e-03\n",
+      "x[5] = -5.83333e-03\n",
+      "x[6] = -5.00000e-03\n",
+      "x[7] = -4.16667e-03\n",
+      "x[8] = -3.33333e-03\n",
+      "x[9] = -2.50000e-03\n",
+      "x[10] = -1.66667e-03\n",
+      "x[11] = -8.33333e-04\n",
+      "x[12] = 4.33681e-19\n",
+      "x[13] = 8.33333e-04\n",
+      "x[14] = 1.66667e-03\n",
+      "x[15] = 2.50000e-03\n",
+      "x[16] = 3.33333e-03\n",
+      "x[17] = 4.16667e-03\n",
+      "x[18] = 5.00000e-03\n",
+      "x[19] = 5.83333e-03\n",
+      "x[20] = 6.66667e-03\n",
+      "x[21] = 7.50000e-03\n",
+      "x[22] = 8.33333e-03\n",
+      "x[23] = 9.16667e-03\n",
+      "x[24] = 1.00000e-02\n",
+      "Offsets: b,c,d = 0.000000,0.000000,0.000000\n",
+      "Offsets: g,h,l = 0.000000,0.000000,0.000000\n",
+      "Offsets: n,o,p = 0.000000,0.000000,0.000000\n",
+      "Finished in 0.2912125587463379 seconds.\n",
       "\n",
       "\n"
      ]
@@ -630,9 +648,10 @@
     "print(\"Now running...\\n\")\n",
     "start = time.time()\n",
     "# cmd.Execute(os.path.join(\"Stilde_flux_unit_test\"))\n",
-    "!./Validation/A2B_unit_test 1 1 1 1\n",
+    "# !./Validation/A2B_unit_test 1 1 1 1\n",
     "# To do a convergence test, we'll also need a second grid with twice the resolution.\n",
     "!./Validation/A2B_unit_test 7 7 7 1\n",
+    "!./Validation/A2B_unit_test 19 19 19 1\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "# os.chdir(os.path.join(\"../\"))\n"
@@ -662,14 +681,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Face | Res  | L2 norm | Conv. Order\n",
+      "Face | Res  |  L2 norm  | Conv. Order\n",
       " Int | Dx   | 0.0817002 | -- \n",
       " --  | Dx/2 | 0.0225991 | 1.85408\n",
       " -x  | Dx   | 0.1475312 | -- \n",
@@ -780,7 +799,7 @@
     "L2_2_zm = np.sqrt(L2_2_zm/(nface))\n",
     "L2_2_zp = np.sqrt(L2_2_zp/(nface))\n",
     "\n",
-    "print(\"Face | Res  | L2 norm | Conv. Order\")\n",
+    "print(\"Face | Res  |  L2 norm  | Conv. Order\")\n",
     "print(\" Int | Dx   | \" + \"{:.7f}\".format(L2_1) + \" | -- \")\n",
     "print(\" --  | Dx/2 | \" + \"{:.7f}\".format(L2_2) + \" | \" + \"{:.5f}\".format(np.log2(L2_1/L2_2)))\n",
     "print(\" -x  | Dx   | \" + \"{:.7f}\".format(L2_1_xm) + \" | -- \")\n",
