--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests.ipynb
@@ -115,7 +115,7 @@
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "\n",
-    "import reference_metric as rfm\n",
+    "import reference_metric as rfm   # NRPy+: Reference metric support\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Cartesian\")\n",
     "rfm.reference_metric()\n",
     "\n",
