--- a/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish-GiRaFFE_NRPy-A2B.ipynb
@@ -466,15 +466,15 @@
     "    f = (double)(rand()%20)/5.0;\n",
     "    m = (double)(rand()%20)/5.0;\n",
     "    // Offsets\n",
-    "    b = 0;//(double)(rand()%10-5)/1000.0;\n",
-    "    c = 0;//(double)(rand()%10-5)/1000.0;\n",
-    "    d = 0;//(double)(rand()%10-5)/1000.0;\n",
-    "    g = 0;//(double)(rand()%10-5)/1000.0;\n",
-    "    h = 0;//(double)(rand()%10-5)/1000.0;\n",
-    "    l = 0;//(double)(rand()%10-5)/1000.0;\n",
-    "    n = 0;//(double)(rand()%10-5)/1000.0;\n",
-    "    o = 0;//(double)(rand()%10-5)/1000.0;\n",
-    "    p = 0;//(double)(rand()%10-5)/1000.0;\n",
+    "    b = (double)(rand()%10-5)/1000.0;\n",
+    "    c = (double)(rand()%10-5)/1000.0;\n",
+    "    d = (double)(rand()%10-5)/1000.0;\n",
+    "    g = (double)(rand()%10-5)/1000.0;\n",
+    "    h = (double)(rand()%10-5)/1000.0;\n",
+    "    l = (double)(rand()%10-5)/1000.0;\n",
+    "    n = (double)(rand()%10-5)/1000.0;\n",
+    "    o = (double)(rand()%10-5)/1000.0;\n",
+    "    p = (double)(rand()%10-5)/1000.0;\n",
     "    \n",
     "    printf(\"Offsets: b,c,d = %f,%f,%f\\n\",b,c,d);\n",
     "    printf(\"Offsets: g,h,l = %f,%f,%f\\n\",g,h,l);\n",
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -576,13 +576,24 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/A2B_unit_test.c -o Validation/A2B_unit_test -lm`...\n",
-      "Finished executing in 0.6110210418701172 seconds.\n",
+      "Finished executing in 0.6084060668945312 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.6222484111785889 seconds.\n",
+      "Finished in 0.6184256076812744 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
+      "dxx0,dxx1,dxx2 = 3.33333e-03,3.33333e-03,3.33333e-03\n",
+      "x[0] = -1.00000e-02\n",
+      "x[1] = -6.66667e-03\n",
+      "x[2] = -3.33333e-03\n",
+      "x[3] = 4.33681e-19\n",
+      "x[4] = 3.33333e-03\n",
+      "x[5] = 6.66667e-03\n",
+      "x[6] = 1.00000e-02\n",
+      "Offsets: b,c,d = 0.000000,-0.002000,0.000000\n",
+      "Offsets: g,h,l = 0.001000,-0.003000,0.004000\n",
+      "Offsets: n,o,p = -0.004000,-0.003000,0.002000\n",
       "dxx0,dxx1,dxx2 = 1.66667e-03,1.66667e-03,1.66667e-03\n",
       "x[0] = -1.00000e-02\n",
       "x[1] = -8.33333e-03\n",
@@ -597,9 +608,9 @@
       "x[10] = 6.66667e-03\n",
       "x[11] = 8.33333e-03\n",
       "x[12] = 1.00000e-02\n",
-      "Offsets: b,c,d = 0.000000,0.000000,0.000000\n",
-      "Offsets: g,h,l = 0.000000,0.000000,0.000000\n",
-      "Offsets: n,o,p = 0.000000,0.000000,0.000000\n",
+      "Offsets: b,c,d = 0.000000,-0.002000,0.000000\n",
+      "Offsets: g,h,l = 0.001000,-0.003000,0.004000\n",
+      "Offsets: n,o,p = -0.004000,-0.003000,0.002000\n",
       "dxx0,dxx1,dxx2 = 8.33333e-04,8.33333e-04,8.33333e-04\n",
       "x[0] = -1.00000e-02\n",
       "x[1] = -9.16667e-03\n",
@@ -626,10 +637,10 @@
       "x[22] = 8.33333e-03\n",
       "x[23] = 9.16667e-03\n",
       "x[24] = 1.00000e-02\n",
-      "Offsets: b,c,d = 0.000000,0.000000,0.000000\n",
-      "Offsets: g,h,l = 0.000000,0.000000,0.000000\n",
-      "Offsets: n,o,p = 0.000000,0.000000,0.000000\n",
-      "Finished in 0.2912125587463379 seconds.\n",
+      "Offsets: b,c,d = 0.000000,-0.002000,0.000000\n",
+      "Offsets: g,h,l = 0.001000,-0.003000,0.004000\n",
+      "Offsets: n,o,p = -0.004000,-0.003000,0.002000\n",
+      "Finished in 0.42893338203430176 seconds.\n",
       "\n",
       "\n"
      ]
@@ -648,7 +659,7 @@
     "print(\"Now running...\\n\")\n",
     "start = time.time()\n",
     "# cmd.Execute(os.path.join(\"Stilde_flux_unit_test\"))\n",
-    "# !./Validation/A2B_unit_test 1 1 1 1\n",
+    "!./Validation/A2B_unit_test 1 1 1 1\n",
     "# To do a convergence test, we'll also need a second grid with twice the resolution.\n",
     "!./Validation/A2B_unit_test 7 7 7 1\n",
     "!./Validation/A2B_unit_test 19 19 19 1\n",
@@ -681,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -689,20 +700,20 @@
      "output_type": "stream",
      "text": [
       "Face | Res  |  L2 norm  | Conv. Order\n",
-      " Int | Dx   | 0.0817002 | -- \n",
-      " --  | Dx/2 | 0.0225991 | 1.85408\n",
-      " -x  | Dx   | 0.1475312 | -- \n",
-      " --  | Dx/2 | 0.0344243 | 2.09952\n",
-      " +x  | Dx   | 0.1475312 | -- \n",
-      " --  | Dx/2 | 0.0344243 | 2.09952\n",
-      " -y  | Dx   | 0.2427657 | -- \n",
-      " --  | Dx/2 | 0.0698011 | 1.79824\n",
-      " +y  | Dx   | 0.2427657 | -- \n",
-      " --  | Dx/2 | 0.0698011 | 1.79824\n",
-      " -z  | Dx   | 0.1624672 | -- \n",
-      " --  | Dx/2 | 0.0405504 | 2.00236\n",
-      " +z  | Dx   | 0.1624672 | -- \n",
-      " --  | Dx/2 | 0.0405504 | 2.00236\n"
+      " Int | Dx   | 0.1055447 | -- \n",
+      " --  | Dx/2 | 0.0278600 | 1.92159\n",
+      " -x  | Dx   | 0.1626309 | -- \n",
+      " --  | Dx/2 | 0.0380858 | 2.09427\n",
+      " +x  | Dx   | 0.1540552 | -- \n",
+      " --  | Dx/2 | 0.0361027 | 2.09327\n",
+      " -y  | Dx   | 0.1598659 | -- \n",
+      " --  | Dx/2 | 0.0509759 | 1.64898\n",
+      " +y  | Dx   | 0.3187191 | -- \n",
+      " --  | Dx/2 | 0.0858693 | 1.89207\n",
+      " -z  | Dx   | 0.1834849 | -- \n",
+      " --  | Dx/2 | 0.0425960 | 2.10687\n",
+      " +z  | Dx   | 0.1584009 | -- \n",
+      " --  | Dx/2 | 0.0397512 | 1.99451\n"
      ]
     }
    ],
@@ -820,22 +831,22 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "Results at lower higher resolution for comparison:\n",
+    "Results at higher resolution for comparison:\n",
     "Face | Res  |  L2 norm  | Conv. Order\n",
-    " Int | Dx   | 0.0376219 | -- \n",
-    " --  | Dx/2 | 0.0082351 | 2.19171\n",
-    " -x  | Dx   | 0.0370060 | -- \n",
-    " --  | Dx/2 | 0.0082524 | 2.16488\n",
-    " +x  | Dx   | 0.0396808 | -- \n",
-    " --  | Dx/2 | 0.0083570 | 2.24738\n",
-    " -y  | Dx   | 0.0275861 | -- \n",
-    " --  | Dx/2 | 0.0077821 | 1.82572\n",
-    " +y  | Dx   | 0.0358752 | -- \n",
-    " --  | Dx/2 | 0.0070188 | 2.35370\n",
-    " -z  | Dx   | 0.0491462 | -- \n",
-    " --  | Dx/2 | 0.0132111 | 1.89533\n",
-    " +z  | Dx   | 0.0496695 | -- \n",
-    " --  | Dx/2 | 0.0016677 | 4.89639"
+    " Int | Dx   | 0.0817002 | -- \n",
+    " --  | Dx/2 | 0.0225991 | 1.85408\n",
+    " -x  | Dx   | 0.1475312 | -- \n",
+    " --  | Dx/2 | 0.0344243 | 2.09952\n",
+    " +x  | Dx   | 0.1475312 | -- \n",
+    " --  | Dx/2 | 0.0344243 | 2.09952\n",
+    " -y  | Dx   | 0.2427657 | -- \n",
+    " --  | Dx/2 | 0.0698011 | 1.79824\n",
+    " +y  | Dx   | 0.2427657 | -- \n",
+    " --  | Dx/2 | 0.0698011 | 1.79824\n",
+    " -z  | Dx   | 0.1624672 | -- \n",
+    " --  | Dx/2 | 0.0405504 | 2.00236\n",
+    " +z  | Dx   | 0.1624672 | -- \n",
+    " --  | Dx/2 | 0.0405504 | 2.00236"
    ]
   }
  ],
