Tutorial-GRHD_Equations-Cartesian: clarify the comments on Greek/Latin indices at the top. No functional change

--- a/Tutorial-GRHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian.ipynb
@@ -85,16 +85,16 @@
     "\n",
     "When we calculate $\\beta_i = \\gamma_{ij} \\beta^j$, we use Latin indices:\n",
     "```python\n",
-    "betaD = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
+    "betaD = ixp.zerorank1(DIM=3)\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
     "        betaD[i] += gammaDD[i][j] * betaU[j]\n",
     "```\n",
     "\n",
     "As a corollary, any expressions involving mixed Greek and Latin indices will need to offset one set of indices by one: A Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial notebook). This can be seen when we handle $\\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}$:\n",
     "```python\n",
     "# \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} / 2\n",
-    "for i in range(DIM):\n",
+    "for i in range(3):\n",
     "    for mu in range(4):\n",
     "        for nu in range(4):\n",
     "            S_tilde_rhsD[i] += alpsqrtgam * T4EMUU[mu][nu] * g4DD_zerotimederiv_dD[mu][nu][i+1] / 2\n",
