GRMHD,GRFFE tutorials: Update documentation; also error out if any of the validation tests fail

--- a/Tutorial-GRFFE_Equations-Cartesian.ipynb
+++ b/Tutorial-GRFFE_Equations-Cartesian.ipynb
@@ -72,24 +72,24 @@
     "for mu in range(4):\n",
     "    for nu in range(4):\n",
     "        # Term 1: b^2 u^{\\mu} u^{\\nu}\n",
-    "        T4EMUU[mu][nu] = smallbsquared*u4U[mu]*u4U[nu]\n",
+    "        T4EMUU[mu][nu] = smallb2*u4U[mu]*u4U[nu]\n",
     "```\n",
     "\n",
     "When we calculate $\\beta_i = \\gamma_{ij} \\beta^j$, we use Latin indices:\n",
     "```python\n",
-    "betaD = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
+    "betaD = ixp.zerorank1(DIM=3)\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
     "        betaD[i] += gammaDD[i][j] * betaU[j]\n",
     "```\n",
     "\n",
     "As a corollary, any expressions involving mixed Greek and Latin indices will need to offset one set of indices by one: A Latin index in a four-vector will be incremented and a Greek index in a three-vector will be decremented (however, the latter case does not occur in this tutorial notebook). This can be seen when we handle $\\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}$:\n",
     "```python\n",
     "# \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu} / 2\n",
-    "for i in range(DIM):\n",
+    "for i in range(3):\n",
     "    for mu in range(4):\n",
     "        for nu in range(4):\n",
-    "            S_tilde_rhsD[i] += alpsqrtgam * T4EMUU[mu][nu] * g4DDdD[mu][nu][i+1] / 2\n",
+    "            S_tilde_rhsD[i] += alpsqrtgam * T4EMUU[mu][nu] * g4DD_zerotimederiv_dD[mu][nu][i+1] / 2\n",
     "```"
    ]
   },
@@ -476,8 +476,12 @@
     "for i in range(len(expr_list)):\n",
     "    comp_func(expr_list[i],exprcheck_list[i],namecheck_list[i])\n",
     "\n",
+    "import sys\n",
     "if all_passed:\n",
-    "    print(\"ALL TESTS PASSED!\")"
+    "    print(\"ALL TESTS PASSED!\")\n",
+    "else:\n",
+    "    print(\"ERROR: AT LEAST ONE TEST DID NOT PASS\")\n",
+    "    sys.exit(1)"
    ]
   },
   {
