GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C: Created the python module and started the self validation and unit test.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -108,10 +108,6 @@
     "import reference_metric as rfm   # NRPy+: Reference metric support\n",
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
     "\n",
-    "# Set spatial dimension (must be 3 for BSSN)\n",
-    "DIM = 3\n",
-    "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
-    "\n",
     "thismodule = \"GiRaFFE_NRPy-C2P_P2C\"\n",
     "\n",
     "# There are several C parameters that we will need in this module:\n",
@@ -157,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,22 +161,24 @@
     "# Recall that Btilde^i = sqrtgamma*B^i\n",
     "sqrtgammadet = sp.sqrt(gammadet)\n",
     "BtildeU = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
+    "for i in range(3):\n",
+    "    # \\tilde{B}^i = B^i \\sqrt{\\gamma}\n",
     "    BtildeU[i] = sqrtgammadet*BU[i]\n",
     "\n",
     "BtildeD = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
     "        BtildeD[j] += gammaDD[i][j]*BtildeU[i]\n",
     "        \n",
     "Btilde2 = sp.sympify(0)\n",
-    "for i in range(DIM):\n",
+    "for i in range(3):\n",
     "    Btilde2 += BtildeU[i]*BtildeD[i]\n",
     "    \n",
     "# Then, enforce the orthogonality:\n",
     "if par.parval_from_str(\"GiRaFFE_NRPy-C2P_P2C::enforce_orthogonality_StildeD_BtildeU\"):\n",
-    "    for i in range(DIM):\n",
-    "        for j in range(DIM):\n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            # {\\tilde S}_i = {\\tilde S}_i - ({\\tilde S}_j {\\tilde B}^j) {\\tilde B}_i/{\\tilde B}^2\n",
     "            StildeD[i] -= (StildeD[j]*BtildeU[j])*BtildeD[i]/Btilde2\n"
    ]
   },
@@ -196,9 +194,7 @@
     "The next fix that we will apply limits the Lorentz factor. That is, we define the factor $f$ as \n",
     "$$f = \\sqrt{(1-\\Gamma_{\\max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma {\\tilde S}^2)}.$$\n",
     "\n",
-    "If $f<1$, we rescale the components of ${\\tilde S}_i$ by $f$. That is, if \n",
-    "$$\\tilde{S}^2 > (1-\\gamma_{\\max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma),$$ \n",
-    "we must then set\n",
+    "If $f<1$, we rescale the components of ${\\tilde S}_i$ by $f$. That is, we must set\n",
     "$${\\tilde S}_i \\rightarrow {\\tilde S}_i \\min(1,f).$$\n",
     "\n",
     "Here, we will use a formulation of the `min()` function that does not use `if`:\n",
@@ -213,27 +209,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First we need to compute the factor f: \n",
+    "# Calculate \\tilde{S}^2:\n",
     "Stilde2 = sp.sympify(0)\n",
     "for i in range(3):\n",
     "    for j in range(3):\n",
     "        Stilde2 += gammaUU[i][j]*StildeD[i]*StildeD[j]\n",
-    "speed_limit_factor = sp.sqrt((1-GAMMA_SPEED_LIMIT**(-2))*Btilde2*Btilde2/(16*M_PI*M_PI*sqrtgammadet*Stilde2*Stilde2))\n",
+    "\n",
+    "# First we need to compute the factor f: \n",
+    "# f = \\sqrt{(1-\\Gamma_{\\max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma {\\tilde S}^2)}\n",
+    "speed_limit_factor = sp.sqrt((1-GAMMA_SPEED_LIMIT**(-2))\\\n",
+    "                             *Btilde2*Btilde2/(16*M_PI*M_PI*sqrtgammadet*Stilde2*Stilde2))\n",
     "\n",
     "def min_noif(a,b):\n",
+    "    # This returns the minimum of a and b\n",
+    "    # If a>b, then we get 0.5*(a+b-a+b) = b\n",
+    "    # If b>a, then we get 0.5*(a+b+a-b) = a\n",
     "    return sp.Rational(1,2)*(a+b-nrpyAbs(a-b))\n",
     "\n",
+    "# Calculate B^2\n",
     "B2 = sp.sympify(0)\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
     "        B2 += gammaDD[i][j]*BU[i]*BU[j]\n",
     "\n",
+    "# Enforce the speed limit on StildeD:\n",
     "if par.parval_from_str(\"GiRaFFE_NRPy-C2P_P2C::enforce_speed_limit_StildeD\"):\n",
-    "    for i in range(DIM):\n",
+    "    for i in range(3):\n",
     "        StildeD[i] *= min_noif(1,speed_limit_factor)"
    ]
   },
@@ -254,15 +259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "if par.parval_from_str(\"GiRaFFE_NRPy-C2P_P2C::enforce_orthogonality_StildeD_BtildeU\") or par.parval_from_str(\"GiRaFFE_NRPy-C2P_P2C::enforce_speed_limit_StildeD\"):\n",
     "    # Recompute 3-velocity:\n",
-    "    for i in range(DIM):\n",
-    "        for j in range(DIM):\n",
-    "            ValenciavU[i] = 4.0*M_PI*gammaUU[i][j]*StildeD[j]/(sqrtgammadet*B2)\n"
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            # \\bar{v}^i = 4 \\pi \\gamma^{ij} {\\tilde S}_j / (\\sqrt{\\gamma} B^2)\n",
+    "            ValenciavU[i] = sp.sympify(4.0)*M_PI*gammaUU[i][j]*StildeD[j]/(sqrtgammadet*B2)\n"
    ]
   },
   {
@@ -281,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,8 +310,8 @@
     "nU[2] = 1\n",
     "# Lower the index, as usual:\n",
     "nD = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
     "        nD[i] = gammaDD[i][j]*nU[j]\n",
     "\n",
     "if par.parval_from_str(\"GiRaFFE_NRPy-C2P_P2C::enforce_current_sheet_prescription\"):\n",
@@ -313,13 +319,13 @@
     "    driftvU = ixp.declarerank1(\"driftvU\")\n",
     "\n",
     "    inner_product = sp.sympify(0)\n",
-    "    for i in range(DIM):\n",
+    "    for i in range(3):\n",
     "        inner_product += driftvU[i]*nD[i] # This is the portion of the drift velocity normal to the z plane\n",
     "                                          # In flat space, this is just v^z\n",
     "    # We'll use a sympy utility to solve for v^z. This should make it easier to generalize later\n",
     "    newdriftvU2 = sp.solve(inner_product,driftvU[2])\n",
     "    newdriftvU2 = newdriftvU2[0] # In flat space this reduces to v^z=0\n",
-    "    for i in range(DIM):\n",
+    "    for i in range(3):\n",
     "        # Now, we substitute drift velocity in terms of our preferred Valencia velocity\n",
     "        newdriftvU2 = newdriftvU2.subs(driftvU[i],alpha*ValenciavU[i]-betaU[i])\n",
     "    # Now that we have the z component, it's time to substitute its Valencia form in.\n",
@@ -346,20 +352,39 @@
     "# Step 2: The primitive-to-conservative solver \\[Back to [top](#toc)\\]\n",
     "$$\\label{p2c}$$\n",
     "\n",
-    "This function is used to recompute the conservatives $\\tilde{S}_i$ after the 3-velocity is changed as part of the current sheet prescription. It implements the same equation used to compute the initial Poynting flux from the initial velocity: $$\\tilde{S}_i = \\gamma_{ij} \\frac{v^j \\sqrt{\\gamma}B^2}{4 \\pi}$$ in terms of the Valencia 3-velocity. In the implementation here, we first calculate $B^2 = \\gamma_{ij} B^i B^j$, then $v_i = \\gamma_{ij} v^j$ before we calculate the equivalent expression $$\\tilde{S}_i = \\frac{v_j \\sqrt{\\gamma}B^2}{4 \\pi}.$$"
+    "This function is used to recompute the conservatives $\\tilde{S}_i$ after the 3-velocity is changed as part of the current sheet prescription. It implements the same equation used to compute the initial Poynting flux from the initial velocity: $$\\tilde{S}_i = \\gamma_{ij} \\frac{\\bar{v}^j \\sqrt{\\gamma}B^2}{4 \\pi}$$ in terms of the Valencia 3-velocity. In the implementation here, we first calculate $B^2 = \\gamma_{ij} B^i B^j$, then $v_i = \\gamma_{ij} v^j$ before we calculate the equivalent expression $$\\tilde{S}_i = \\frac{\\bar{v}_j \\sqrt{\\gamma}B^2}{4 \\pi}.$$\n",
+    "\n",
+    "Here, we will simply let the NRPy+ `GRFFE` module handle this part, since that is already validated."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# After recalculating the 3-velocity, we need to update the poynting flux:\n",
-    "StildeD = ixp.zerorank1() # Reset this to avoid contamination\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        StildeD[i] = gammaDD[i][j]*ValenciavU[j]*sqrtgammadet*B2/(4*M_PI)\n"
+    "import GRFFE.equations as GFeq\n",
+    "import GRHD.equations as GHeq\n",
+    "\n",
+    "def GiRaFFE_NRPy_P2C(ValenciavU,BU,gammaDD,gammaUU,gammadet,betaU,alpha)\n",
+    "    sqrtgammadet = sp.sqrt(gammadet)\n",
+    "    # After recalculating the 3-velocity, we need to update the poynting flux:\n",
+    "    # We'll reset the Valencia velocity, since this will be part of a second call to outCfunction.\n",
+    "    ValenciavU = ixp.declarerank1(\"ValenciavU\",DIM=3)\n",
+    "\n",
+    "    # First compute stress-energy tensor T4UU and T4UD:\n",
+    "    GFeq.compute_B_notildeU(sqrtgammadet, BtildeU)\n",
+    "    GFeq.compute_smallb4U(gammaDD, betaU, alpha, u4U, BU, sp.sqrt(sp.sympify(4.0)*M_PI))\n",
+    "    GFeq.compute_smallbsquared(gammaDD, betaU, alpha, GFeq.smallb4U)\n",
+    "\n",
+    "    GHeq.u4U_in_terms_of_ValenciavU__rescale_ValenciavU_by_applying_speed_limit(alpha, betaU, gammaDD, ValenciavU)\n",
+    "    GFeq.compute_TEM4UU(gammaDD, betaU, alpha, GFeq.smallb4U, GFeq.smallbsquared, u4U)\n",
+    "    GFeq.compute_TEM4UD(gammaDD, betaU, alpha, GFeq.TEM4UU)\n",
+    "\n",
+    "    # Compute conservative variables in terms of primitive variables\n",
+    "    GHeq.compute_S_tildeD(alpha, sqrtgammadet, GFeq.TEM4UD)\n",
+    "    global StildeD\n",
+    "    StildeD = GHeq.S_tildeD\n"
    ]
   },
   {
@@ -379,46 +404,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing difference between original C code and this code...\n",
-      "Checking file driver_conserv_to_prims_FFE.C\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file compute_conservatives_FFE.C\n",
-      "No difference. TEST PASSED!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import difflib\n",
-    "import sys\n",
+    "def comp_func(expr1,expr2,basename,prefixname2=\"GRFFE.\"):\n",
+    "    if str(expr1-expr2)!=\"0\":\n",
+    "        print(basename+\" - \"+prefixname2+basename+\" = \"+ str(expr1-expr2))\n",
+    "        all_passed=False\n",
     "\n",
-    "# Define the directory that we wish to validate against:\n",
-    "valdir = \"GiRaFFE_NRPy/GiRaFFE_Ccode_library/\"\n",
+    "def gfnm(basename,idx1,idx2=None,idx3=None):\n",
+    "    if idx2==None:\n",
+    "        return basename+\"[\"+str(idx1)+\"]\"\n",
+    "    if idx3==None:\n",
+    "        return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"]\"\n",
+    "    return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"][\"+str(idx3)+\"]\"\n",
     "\n",
-    "# print(\"Printing difference between original C code and this code...\")\n",
-    "# # Open the files to compare\n",
-    "# files_to_check = [\"driver_conserv_to_prims_FFE.C\",\"compute_conservatives_FFE.C\"]\n",
+    "import GiRaFFE_NRPy.GiRaFFE_NRPy_C2P_P2C as C2P\n",
+    "testValenciavU = ixp.declarerank1(\"testValenciavU\",DIM=3)\n",
+    "testStildeD = ixp.declarerank1(\"testStildeDU\",DIM=3)\n",
+    "GiRaFFE_NRPy_C2P(StildeD,ValenciavU,BU,gammaDD,gammaUU,gammadet,betaU,alpha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_passed=True\n",
+    "def comp_func(expr1,expr2,basename,prefixname2=\"GRFFE.\"):\n",
+    "    if str(expr1-expr2)!=\"0\":\n",
+    "        print(basename+\" - \"+prefixname2+basename+\" = \"+ str(expr1-expr2))\n",
+    "        all_passed=False\n",
     "\n",
-    "# for file in files_to_check:\n",
-    "#     print(\"Checking file \" + file)\n",
-    "#     with open(os.path.join(valdir+file)) as file1, open(os.path.join(outdir+file)) as file2:\n",
-    "#         # Read the lines of each file\n",
-    "#         file1_lines = file1.readlines()\n",
-    "#         file2_lines = file2.readlines()\n",
-    "#         num_diffs = 0\n",
-    "#         for line in difflib.unified_diff(file1_lines, file2_lines, fromfile=os.path.join(valdir+file), tofile=os.path.join(outdir+file)):\n",
-    "#             sys.stdout.writelines(line)\n",
-    "#             num_diffs = num_diffs + 1\n",
-    "#         if num_diffs == 0:\n",
-    "#             print(\"No difference. TEST PASSED!\")\n",
-    "#         else:\n",
-    "#             print(\"ERROR: Disagreement found with .py file. See differences above.\")"
+    "def gfnm(basename,idx1,idx2=None,idx3=None):\n",
+    "    if idx2==None:\n",
+    "        return basename+\"[\"+str(idx1)+\"]\"\n",
+    "    if idx3==None:\n",
+    "        return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"]\"\n",
+    "    return basename+\"[\"+str(idx1)+\"][\"+str(idx2)+\"][\"+str(idx3)+\"]\"\n"
    ]
   },
   {
@@ -436,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
