--- a/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -406,8 +406,17 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALL TESTS PASSED!\n"
+     ]
+    }
+   ],
    "source": [
+    "all_passed=True\n",
     "def comp_func(expr1,expr2,basename,prefixname2=\"GRFFE.\"):\n",
     "    if str(expr1-expr2)!=\"0\":\n",
     "        print(basename+\" - \"+prefixname2+basename+\" = \"+ str(expr1-expr2))\n",
@@ -428,8 +437,30 @@
     "sqrt4pi = sp.symbols('sqrt4pi', real=True)\n",
     "GiRaFFE_NRPy_P2C(gammaDD,betaU,alpha,  ValenciavU,BU, sqrt4pi)\n",
     "\n",
-    "import GiRaFFE_NRPy.GiRaFFE_NRPy_C2P_P2C as C2P\n",
+    "import GiRaFFE_NRPy.GiRaFFE_NRPy_C2P_P2C as C2P_P2C\n",
     "\n",
+    "C2P_P2C.GiRaFFE_NRPy_P2C(gammaDD,betaU,alpha,  ValenciavU,BU, sqrt4pi)\n",
+    "\n",
+    "expr_list = []\n",
+    "exprcheck_list = []\n",
+    "namecheck_list = []\n",
+    "\n",
+    "for i in range(3):\n",
+    "    namecheck_list.extend([gfnm(\"StildeD\",i)])\n",
+    "    exprcheck_list.extend([C2P_P2C.StildeD[i]])\n",
+    "    expr_list.extend([StildeD[i]])\n",
+    "\n",
+    "for i in range(len(expr_list)):\n",
+    "    comp_func(expr_list[i],exprcheck_list[i],namecheck_list[i])\n",
+    "\n",
+    "import sys\n",
+    "if all_passed:\n",
+    "    print(\"ALL TESTS PASSED!\")\n",
+    "else:\n",
+    "    print(\"ERROR: AT LEAST ONE TEST DID NOT PASS\")\n",
+    "    sys.exit(1)\n",
+    "    \n",
+    "# Still need to perform self-validation checks on C2P\n",
     "# testValenciavU = ixp.declarerank1(\"testValenciavU\",DIM=3)\n",
     "# testStildeD = ixp.declarerank1(\"testStildeDU\",DIM=3)\n",
     "# C2P.GiRaFFE_NRPy_C2P(StildeD,ValenciavU,BU,gammaDD,gammaUU,gammadet,betaU,alpha)"
